--- a/html/odev1/index.html
+++ b/html/odev1/index.html
@@ -19,5 +19,29 @@
         Nodejs ve React.js ile fullstack developer olma yolunda ilerliyorum.
         Lorem ipsum, dolor sit amet consectetur adipisicing elit. Adipisci distinctio est assumenda cumque, obcaecati minima eum debitis, modi quos quibusdam et excepturi accusamus ipsum voluptates doloribus consectetur, ipsam inventore! Necessitatibus?
     </p>
+
+    <img src="../assets/family.jpeg"/ alt="family_photo" width="200px" height="auto">
+    <ol>
+        <p>- Best Movies & Series</p>
+        <li>Peaky Blinders</li>
+        <li>Fast and Furious</li>
+        <li>How i met your mother?
+            <a href="https://www.imdb.com/title/tt0460649/">Dizi linki</a>
+        </li>
+    </ol>
+
+    <ol>
+        <p>- Best Books</p>
+        <li>Yapay Tanrı</li>
+        <li>Sözlü Dövüş Sanatı 
+            <a href="https://www.goodreads.com/book/show/52226228-yapay-tanr?from_search=true&from_srp=true&qid=oI4GmuE80k&rank=1">Kitap Link</a>
+        </li>
+        <li>Algorithms</li>
+    </ol>
+
+    <div>
+        Bu bir block elementtir.
+        <span>Bu bir inline elementtir.</span>
+    </div>
 </body>
 </html>
